PokemonPackage/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <label>Pokemon</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pokemons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>