PokemonPackage/main/default/objects/Pokemon__c/fields/Average_Damage__c.field-meta.xml
<CustomField>
    <fullName>Average_Damage__c</fullName>
    <formula>General_Damage__c /2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Damage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>