PokemonPackage/main/default/objects/Pokemon__c/fields/Base_Defense__c.field-meta.xml
<CustomField>
    <fullName>Base_Defense__c</fullName>
    <label>Base Defense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>