PokemonPackage/main/default/objects/Pokemon__c/fields/Base_HP__c.field-meta.xml
<CustomField>
    <fullName>Base_HP__c</fullName>
    <label>Base HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>