PokemonPackage/main/default/objects/Pokemon__c/fields/Battle_HP__c.field-meta.xml
<CustomField>
    <fullName>Battle_HP__c</fullName>
    <label>Battle HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>