PokemonPackage/main/default/objects/Pokemon__c/fields/Defense__c.field-meta.xml
<CustomField>
    <fullName>Defense__c</fullName>
    <formula>Base_Defense__c + ( Base_Defense__c * Level__c * 0.65)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>