PokemonPackage/main/default/objects/Pokemon__c/fields/EXP__c.field-meta.xml
<CustomField>
    <fullName>EXP__c</fullName>
    <label>EXP</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>