PokemonPackage/main/default/objects/Pokemon__c/fields/General_Damage__c.field-meta.xml
<CustomField>
    <fullName>General_Damage__c</fullName>
    <label>General Damage</label>
    <summarizedField>Ability__c.Base_Damage__c</summarizedField>
    <summaryForeignKey>Ability__c.Pokemon__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>