PokemonPackage/main/default/objects/Pokemon__c/fields/HP__c.field-meta.xml
<CustomField>
    <fullName>HP__c</fullName>
    <formula>Base_HP__c + ( Level__c * 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>