PokemonPackage/main/default/objects/Pokemon__c/fields/MP__c.field-meta.xml
<CustomField>
    <fullName>MP__c</fullName>
    <label>MP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>