PokemonPackage/main/default/objects/Pokemon__c/fields/Pokemon_Back__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Back__c</fullName>
    <label>Pokemon Back</label>
    <type>Url</type>
</CustomField>