PokemonPackage/main/default/objects/Pokemon__c/fields/Pokemon_Front__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Front__c</fullName>
    <label>Pokemon_Front</label>
    <type>Url</type>
</CustomField>