PokemonPackage/main/default/objects/Pokemon__c/fields/Pokemon_Name__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Name__c</fullName>
    <label>Pokemon Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>